--- a/MemeMe/Base.lproj/LaunchScreen.xib
+++ b/MemeMe/Base.lproj/LaunchScreen.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,50 +10,23 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MemeMe 1.0" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="30" y="40" width="215" height="43"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(cuz we needz more memes)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="na1-OW-unK">
-                    <rect key="frame" x="241" y="439" width="219" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cat" translatesAutoresizingMaskIntoConstraints="NO" id="WJc-CT-HNy">
-                    <rect key="frame" x="115" y="63" width="250" height="375"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="375" id="ftl-f3-5nY"/>
-                        <constraint firstAttribute="width" constant="250" id="qKO-wl-Gz6"/>
-                    </constraints>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="TaB-Zj-Mxh">
+                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="0.61607641536271651" green="0.84134319875209795" blue="0.99380123615264893" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/8" constant="1" id="5cJ-9S-tgC"/>
-                <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
-                <constraint firstAttribute="trailing" secondItem="na1-OW-unK" secondAttribute="trailing" constant="20" id="KqG-Nf-k1f"/>
-                <constraint firstAttribute="bottom" secondItem="na1-OW-unK" secondAttribute="bottom" constant="20" id="Vxk-QV-6CP"/>
-                <constraint firstAttribute="centerY" secondItem="WJc-CT-HNy" secondAttribute="centerY" constant="-10" id="XfO-E6-Qph"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="fvb-Df-36g"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="na1-OW-unK" secondAttribute="bottom" constant="19" id="klG-6w-Ua7"/>
-                <constraint firstAttribute="centerX" secondItem="WJc-CT-HNy" secondAttribute="centerX" id="mau-Ku-Be6"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="oc7-W5-bmn"/>
+                <constraint firstAttribute="bottom" secondItem="TaB-Zj-Mxh" secondAttribute="bottom" id="JIh-Eb-FHC"/>
+                <constraint firstItem="TaB-Zj-Mxh" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="cUD-QF-omz"/>
+                <constraint firstItem="TaB-Zj-Mxh" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="e5G-qJ-v61"/>
+                <constraint firstAttribute="trailing" secondItem="TaB-Zj-Mxh" secondAttribute="trailing" id="rtt-rH-0fT"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="Koa-jz-hwk"/>
-                    <exclude reference="fvb-Df-36g"/>
-                    <exclude reference="klG-6w-Ua7"/>
-                </mask>
-            </variation>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
     <resources>
-        <image name="cat" width="500" height="375"/>
+        <image name="LaunchImage" width="1536" height="2048"/>
     </resources>
 </document>
