--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -113,7 +113,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2884" y="-204"/>
+            <point key="canvasLocation" x="2653" y="-234"/>
         </scene>
         <!--Sent Memes (Table)-->
         <scene sceneID="p53-Jd-aoJ">
@@ -134,10 +134,10 @@
             </objects>
             <point key="canvasLocation" x="504" y="-392"/>
         </scene>
-        <!--Sent Memes-->
+        <!--Sent Memes Table-->
         <scene sceneID="x6C-k6-dcF">
             <objects>
-                <tableViewController title="Sent Memes" id="cAo-YK-dig" customClass="SentMemesTableViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Sent Memes Table" id="cAo-YK-dig" customClass="SentMemesTableViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="113" sectionHeaderHeight="1" sectionFooterHeight="1" id="RzE-oT-npW">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -183,7 +183,6 @@
                                 <connections>
                                     <outlet property="memeImageView" destination="BM8-M5-DFU" id="G9Y-RA-tHD"/>
                                     <outlet property="memeText" destination="5Is-Cg-NPk" id="WfD-qN-24f"/>
-                                    <segue destination="Ixt-o3-LBO" kind="showDetail" id="Acl-1d-HXB"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -221,10 +220,10 @@
             </objects>
             <point key="canvasLocation" x="504" y="325"/>
         </scene>
-        <!--Sent Memes-->
+        <!--Sent Memes Collection-->
         <scene sceneID="5rG-1k-1fO">
             <objects>
-                <collectionViewController id="gGW-Bo-Dgn" customClass="SentMemesCollectionViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController title="Sent Memes Collection" id="gGW-Bo-Dgn" customClass="SentMemesCollectionViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="sDO-iR-oPr">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -236,7 +235,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MemeCell" id="hBz-Fu-i84" customClass="SentMemesCollectionViewCell" customModule="MemeMe" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SentMemeCell" id="hBz-Fu-i84" customClass="SentMemesCollectionViewCell" customModule="MemeMe" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -257,7 +256,6 @@
                                 </constraints>
                                 <connections>
                                     <outlet property="imageView" destination="wUj-lU-rTi" id="35h-VW-ZIW"/>
-                                    <segue destination="Ixt-o3-LBO" kind="showDetail" id="tEJ-Wc-qah"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -307,12 +305,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z4e-dv-ZuQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2072" y="-204"/>
+            <point key="canvasLocation" x="1865" y="-287"/>
         </scene>
         <!--Meme Detail View Controller-->
         <scene sceneID="gRr-c0-Olm">
             <objects>
-                <viewController id="Ixt-o3-LBO" customClass="MemeDetailViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MemeDetailViewController" hidesBottomBarWhenPushed="YES" id="Ixt-o3-LBO" customClass="MemeDetailViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pxz-u7-eEJ"/>
                         <viewControllerLayoutGuide type="bottom" id="Zla-dY-n8z"/>
@@ -321,32 +319,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h9m-LY-0eZ">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mpa-Qw-WSB">
+                                <rect key="frame" x="36" y="65" width="529" height="470"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="h9m-LY-0eZ" secondAttribute="trailing" id="5a7-fe-xoT"/>
-                            <constraint firstItem="h9m-LY-0eZ" firstAttribute="leading" secondItem="GmP-yP-VBl" secondAttribute="leading" id="BVx-Id-AgR"/>
-                            <constraint firstItem="h9m-LY-0eZ" firstAttribute="bottom" secondItem="Zla-dY-n8z" secondAttribute="top" id="DYV-kP-dVD"/>
-                            <constraint firstItem="h9m-LY-0eZ" firstAttribute="top" secondItem="GmP-yP-VBl" secondAttribute="top" id="cA4-sh-d6v"/>
+                            <constraint firstItem="Mpa-Qw-WSB" firstAttribute="leading" secondItem="GmP-yP-VBl" secondAttribute="leadingMargin" constant="20" id="7R8-05-OWg"/>
+                            <constraint firstItem="Mpa-Qw-WSB" firstAttribute="top" secondItem="pxz-u7-eEJ" secondAttribute="bottom" constant="45" id="lzD-pZ-nK4"/>
+                            <constraint firstItem="Mpa-Qw-WSB" firstAttribute="centerY" secondItem="GmP-yP-VBl" secondAttribute="centerY" id="rOG-8I-ouK"/>
+                            <constraint firstItem="Mpa-Qw-WSB" firstAttribute="centerX" secondItem="GmP-yP-VBl" secondAttribute="centerX" id="zlZ-Ns-DKY"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="h9m-LY-0eZ" id="jk7-xA-ioz"/>
+                        <outlet property="imageView" destination="Mpa-Qw-WSB" id="dsw-x6-Q6K"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="90B-EE-8hC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1855" y="449"/>
+            <point key="canvasLocation" x="2215" y="457"/>
         </scene>
     </scenes>
     <resources>
         <image name="collection_30x30" width="30" height="30"/>
         <image name="table_30x30" width="30" height="30"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="Acl-1d-HXB"/>
-    </inferredMetricsTieBreakers>
 </document>
