--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -19,20 +19,23 @@
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s4I-cT-aVU">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="VXO-YO-eWU"/>
+                                </constraints>
                                 <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="rqC-Rg-xJT"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="V5w-zD-mxL"/>
                                     <barButtonItem systemItem="camera" id="dB4-hc-Noc">
                                         <connections>
                                             <action selector="takePhoto:" destination="BYZ-38-t0r" id="jZT-Ql-9Sw"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="JVN-4b-UH5"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="GNv-en-KjL"/>
                                     <barButtonItem title="Library" id="OEQ-CC-ino">
                                         <connections>
                                             <action selector="chooseFromLibrary:" destination="BYZ-38-t0r" id="RVT-En-UlH"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="9OZ-yq-LC9"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="vlP-0k-J1J"/>
                                 </items>
                             </toolbar>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EWh-Ph-wvf">
@@ -66,47 +69,21 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="EWh-Ph-wvf" firstAttribute="leading" secondItem="s4I-cT-aVU" secondAttribute="leading" id="1cA-pA-Ect"/>
-                            <constraint firstItem="trc-6F-W8u" firstAttribute="leading" secondItem="EWh-Ph-wvf" secondAttribute="trailing" constant="-584" id="3fc-Cb-bYs"/>
-                            <constraint firstItem="s4I-cT-aVU" firstAttribute="top" secondItem="EWh-Ph-wvf" secondAttribute="bottom" id="476-NM-X2C"/>
                             <constraint firstAttribute="trailing" secondItem="EWh-Ph-wvf" secondAttribute="trailing" id="4Oe-Dh-X56"/>
-                            <constraint firstItem="EWh-Ph-wvf" firstAttribute="top" secondItem="trc-6F-W8u" secondAttribute="bottom" constant="-48" id="5j9-Un-XZs"/>
-                            <constraint firstItem="s4I-cT-aVU" firstAttribute="leading" secondItem="EWh-Ph-wvf" secondAttribute="leading" id="DPs-33-72e"/>
+                            <constraint firstAttribute="trailing" secondItem="s4I-cT-aVU" secondAttribute="trailing" id="Ddk-Iz-r1G"/>
                             <constraint firstItem="trc-6F-W8u" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="E2F-NL-gkR"/>
                             <constraint firstAttribute="centerX" secondItem="trc-6F-W8u" secondAttribute="centerX" id="GFe-sk-aPG"/>
                             <constraint firstItem="EWh-Ph-wvf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="I8U-0q-JwU"/>
                             <constraint firstItem="EWh-Ph-wvf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="O47-kF-6SX"/>
-                            <constraint firstItem="aCu-qg-T9i" firstAttribute="leading" secondItem="EWh-Ph-wvf" secondAttribute="trailing" constant="-584" id="PXj-VO-1yH"/>
                             <constraint firstItem="trc-6F-W8u" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="35" id="SE0-hO-zO2"/>
-                            <constraint firstItem="s4I-cT-aVU" firstAttribute="top" secondItem="EWh-Ph-wvf" secondAttribute="bottom" id="TtO-ga-v2k"/>
-                            <constraint firstItem="s4I-cT-aVU" firstAttribute="trailing" secondItem="EWh-Ph-wvf" secondAttribute="trailing" id="Wng-n8-R3v"/>
-                            <constraint firstItem="EWh-Ph-wvf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="XbX-2l-7xg"/>
-                            <constraint firstItem="EWh-Ph-wvf" firstAttribute="bottom" secondItem="s4I-cT-aVU" secondAttribute="top" id="bUW-c1-DNE"/>
-                            <constraint firstItem="EWh-Ph-wvf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="f37-jo-HrL"/>
-                            <constraint firstItem="EWh-Ph-wvf" firstAttribute="trailing" secondItem="s4I-cT-aVU" secondAttribute="trailing" id="fTw-wf-yQu"/>
+                            <constraint firstItem="s4I-cT-aVU" firstAttribute="top" secondItem="EWh-Ph-wvf" secondAttribute="bottom" id="UD3-gC-m37"/>
+                            <constraint firstItem="s4I-cT-aVU" firstAttribute="top" secondItem="aCu-qg-T9i" secondAttribute="bottom" constant="35" id="aRQ-rk-pHq"/>
                             <constraint firstItem="trc-6F-W8u" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="l9a-8R-uok"/>
-                            <constraint firstItem="trc-6F-W8u" firstAttribute="leading" secondItem="EWh-Ph-wvf" secondAttribute="trailing" constant="-584" id="mIv-ZD-k7n"/>
-                            <constraint firstItem="aCu-qg-T9i" firstAttribute="centerX" secondItem="s4I-cT-aVU" secondAttribute="centerX" id="tEI-RJ-WtO"/>
-                            <constraint firstItem="trc-6F-W8u" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="tFK-Ba-6kP"/>
+                            <constraint firstItem="s4I-cT-aVU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="q1j-kS-DvM"/>
                             <constraint firstItem="s4I-cT-aVU" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="uAW-hL-ENI"/>
                             <constraint firstItem="aCu-qg-T9i" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="xaX-et-9EZ"/>
-                            <constraint firstItem="s4I-cT-aVU" firstAttribute="top" secondItem="aCu-qg-T9i" secondAttribute="bottom" constant="35" id="y3R-Bu-bDI"/>
+                            <constraint firstAttribute="centerX" secondItem="aCu-qg-T9i" secondAttribute="centerX" id="zkR-zD-DJ7"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="1cA-pA-Ect"/>
-                                <exclude reference="5j9-Un-XZs"/>
-                                <exclude reference="XbX-2l-7xg"/>
-                                <exclude reference="bUW-c1-DNE"/>
-                                <exclude reference="f37-jo-HrL"/>
-                                <exclude reference="fTw-wf-yQu"/>
-                                <exclude reference="3fc-Cb-bYs"/>
-                                <exclude reference="mIv-ZD-k7n"/>
-                                <exclude reference="tFK-Ba-6kP"/>
-                                <exclude reference="PXj-VO-1yH"/>
-                                <exclude reference="TtO-ga-v2k"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="aOg-l1-Eze"/>
                     <connections>
