--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                             <action selector="chooseFromLibrary:" destination="BYZ-38-t0r" id="RVT-En-UlH"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="vlP-0k-J1J"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="f50-yb-ekc"/>
                                 </items>
                             </toolbar>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EWh-Ph-wvf">
