--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -303,11 +303,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mpa-Qw-WSB">
-                                <rect key="frame" x="36" y="65" width="529" height="470"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5fq-T1-hrU">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="nWS-fd-BfI"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem systemItem="action" id="Ozb-n8-duD">
                                         <connections>
@@ -325,13 +328,13 @@
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Mpa-Qw-WSB" firstAttribute="leading" secondItem="GmP-yP-VBl" secondAttribute="leadingMargin" constant="20" id="7R8-05-OWg"/>
+                            <constraint firstAttribute="trailing" secondItem="Mpa-Qw-WSB" secondAttribute="trailing" id="0nl-9B-BVo"/>
+                            <constraint firstItem="5fq-T1-hrU" firstAttribute="leading" secondItem="GmP-yP-VBl" secondAttribute="leading" id="65o-0N-bcy"/>
                             <constraint firstItem="5fq-T1-hrU" firstAttribute="bottom" secondItem="Zla-dY-n8z" secondAttribute="top" id="9d1-eC-w9c"/>
-                            <constraint firstItem="Mpa-Qw-WSB" firstAttribute="top" secondItem="pxz-u7-eEJ" secondAttribute="bottom" constant="45" id="lzD-pZ-nK4"/>
-                            <constraint firstItem="5fq-T1-hrU" firstAttribute="centerX" secondItem="Mpa-Qw-WSB" secondAttribute="centerX" id="rHd-Np-0ck"/>
-                            <constraint firstItem="Mpa-Qw-WSB" firstAttribute="centerY" secondItem="GmP-yP-VBl" secondAttribute="centerY" id="rOG-8I-ouK"/>
-                            <constraint firstItem="5fq-T1-hrU" firstAttribute="leading" secondItem="GmP-yP-VBl" secondAttribute="leading" id="ziQ-Fz-fmO"/>
-                            <constraint firstItem="Mpa-Qw-WSB" firstAttribute="centerX" secondItem="GmP-yP-VBl" secondAttribute="centerX" id="zlZ-Ns-DKY"/>
+                            <constraint firstItem="Mpa-Qw-WSB" firstAttribute="top" secondItem="pxz-u7-eEJ" secondAttribute="bottom" id="JTX-P1-Pzg"/>
+                            <constraint firstItem="Mpa-Qw-WSB" firstAttribute="leading" secondItem="GmP-yP-VBl" secondAttribute="leading" id="LXX-xc-jLn"/>
+                            <constraint firstAttribute="trailing" secondItem="5fq-T1-hrU" secondAttribute="trailing" id="Nfx-dQ-WJy"/>
+                            <constraint firstItem="5fq-T1-hrU" firstAttribute="top" secondItem="Mpa-Qw-WSB" secondAttribute="bottom" id="Ng1-pX-IGI"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -342,7 +345,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="90B-EE-8hC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2215" y="457"/>
+            <point key="canvasLocation" x="2302" y="460"/>
         </scene>
     </scenes>
     <resources>
